Refactored code and added functionality to street controller
