# src/Routes/api-v1/street/Street.js
@@ -2,10 +2,10 @@ import { Router } from "express";
 import StreetController from "../../../controller/StreetController";
 const streetRouter = Router();
 
-streetRouter.get("/:userId/", StreetController.getStreets);
-streetRouter.get("/:userId/:id", StreetController);
-streetRouter.post("/:userId/", StreetController);
-streetRouter.put("/:userId/:id", StreetController);
-streetRouter.delete("/:userId/:id", StreetController);
+streetRouter.get("/", StreetController.getStreets);
+streetRouter.get("/:id", StreetController.getStreet);
+streetRouter.post("/", StreetController);
+streetRouter.put("/:id", StreetController);
+streetRouter.delete("/:id", StreetController);
 
 export default streetRouter;
