# swagger-output.json
@@ -11,15 +11,53 @@
     "https"
   ],
   "paths": {
-    "/api/v1/street/{userId}/": {
+    "/api/v1/street/": {
       "get": {
-        "summary":"Search Cases",
-        "tags":["Street Problems:"],
-        "description": "This route lets you search for street cases.",
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api/v1/street/{id}": {
+      "get": {
+        "description": "",
         "parameters": [
           {
-            "name": "userId",
-            "description": "Please submit the id of your case",
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -27,42 +65,22 @@
         ],
         "responses": {}
       },
-      "post": {
-        "summary":["Submit a New Case"],
-        "tags":["Street Problems:"],
-        "description": "This route lets you submit a new case.",
-        "parameters": [],
-        "responses": {}
-      }
-    },
-    "/api/v1/street/{userId}/{id}": {
-      "get": {
-        "summary":"Search for a Case",
-        "tags":["Street Problems:"],
-        "description": "This route lets you search for a street case.",
-        "parameters": [],
-        "responses": {}
-      },
-      "put": {
-        "summary":"Update a Case",
-        "tags":["Street Problems:"],
-        "description": "This route lets you update a street case.",
-        "parameters": [],
-        "responses": {}
-      },
       "delete": {
-        "summary":"Delete a Case",
-        "tags":["Street Problems:"],
-        "description": "This route lets you delete a street case.",
-        "parameters": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {}
       }
     },
     "/api/v1/sewer/": {
       "post": {
-        "summary":"Submit a Case",
-        "tags":["Sewer Problems:"],
-        "description": "This route lets you submit a sewer case.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -108,9 +126,7 @@
         }
       },
       "get": {
-        "summary":"Search Cases",
-        "tags":["Sewer Problems:"],
-        "description": "This route lets you search for sewer cases.",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -124,9 +140,7 @@
     },
     "/api/v1/sewer/{id}": {
       "put": {
-        "summary":"Update a Case",
-        "tags":["Sewer Problems:"],
-        "description": "This route lets you update a sewer case.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -134,108 +148,6 @@
             "required": true,
             "type": "string"
           },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "city": {
-                  "example": "any"
-                },
-                "neighborhood": {
-                  "example": "any"
-                },
-                "fullName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "dateReport": {
-                  "example": "any"
-                },
-                "level": {
-                  "example": "any"
-                },
-                "comments": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "get": {
-        "summary":"Search a Case",
-        "tags":["Sewer Problems:"],
-        "description": "This route lets you search for a sewer case.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "summary":"Delete a Case",
-        "tags":["Sewer Problems:"],
-        "description": "This route lets you delete a sewer case.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-
-    "/api/v1/power/": {
-      "post": {
-        "summary":"Submit a Case",
-        "tags":["Power Problems:"],
-        "description": "This route lets you submit a power case.",
-        "parameters": [
           {
             "name": "body",
             "in": "body",
@@ -274,15 +186,105 @@
           "400": {
             "description": "Bad Request"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "get": {
-        "summary":"Search Cases",
-        "tags":["Power Problems:"],
-        "description": "This route lets you search for power cases.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/power/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "city": {
+                  "example": "any"
+                },
+                "neighborhood": {
+                  "example": "any"
+                },
+                "fullName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "dateReport": {
+                  "example": "any"
+                },
+                "level": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -296,9 +298,7 @@
     },
     "/api/v1/power/{id}": {
       "put": {
-        "summary":"Update a Case",
-        "tags":["Power Problems:"],
-        "description": "This route lets you update a sewer case.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -344,18 +344,13 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "get": {
-        "summary":"Search a Case",
-        "tags":["Power Problems:"],
-        "description": "This route lets you search for a power case.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -368,8 +363,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -377,9 +372,7 @@
         }
       },
       "delete": {
-        "summary":"Delete a Case",
-        "tags":["Power Problems:"],
-        "description": "This route lets you delete a power case.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -397,6 +390,59 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/auth/login": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/user/auth/callback": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/user/protected": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/user/auth/failure": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/user/auth/logout": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
